# MooshakTools

./: CMakeLists.txt  README.md  evaluate.md  submissions.md
apps/: evaluate.cpp  evaluateApp.hpp  listSubmissions.cpp  report.cpp  reportApp.hpp  submissionApp.hpp  submissions.cpp
doc/html/: File_8hpp.html  File_8hpp__dep__incl.dot  File_8hpp__incl.dot  File_8hpp_source.html  MooshakEval_8hpp.html  MooshakEval_8hpp__dep__incl.dot  MooshakEval_8hpp_source.html  annotated.html  classFile-members.html  classFile.html  classFileCompare-members.html  classFileCompare.html  classMooshakEval-members.html  classMooshakEval.html  classes.html  cmp_8cpp.html  cmp_8cpp__incl.dot  dir_000002_000001.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a_dep.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_8e68cb0080a9657bfd96f2eefbe88aad.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d45081dd093b27a2fe9dc1ab96c3bebb.html  dir_fd5c207eccd4d0b6e1184b6e68627397.html  file0_8txt.html  file1_8txt.html  file2_8txt.html  file2n_8txt.html  file3_8txt.html  file3e_8txt.html  file3n_8txt.html  file4_8txt.html  files.html  functions.html  functions_func.html  functions_rela.html  globals.html  globals_func.html  globals_vars.html  (+11 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  classes_1.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  related_0.js  searchdata.js  variables_0.js  variables_1.js
doc/latex/: File_8hpp.tex  File_8hpp__dep__incl.dot  File_8hpp__incl.dot  MooshakEval_8hpp.tex  MooshakEval_8hpp__dep__incl.dot  annotated.tex  classFile.tex  classFileCompare.tex  classMooshakEval.tex  cmp_8cpp.tex  cmp_8cpp.tex.tmp  cmp_8cpp__incl.dot  dir_13e138d54eb8818da29c3992edef070a.tex  dir_13e138d54eb8818da29c3992edef070a_dep.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_8e68cb0080a9657bfd96f2eefbe88aad.tex  dir_d28a4824dc47e487b107a5db32ef43c4.tex  dir_d45081dd093b27a2fe9dc1ab96c3bebb.tex  dir_fd5c207eccd4d0b6e1184b6e68627397.tex  file0_8txt.tex  file1_8txt.tex  file2_8txt.tex  file2n_8txt.tex  file3_8txt.tex  file3e_8txt.tex  file3n_8txt.tex  file4_8txt.tex  files.tex  inner_2file0_8txt.tex  main_8cpp.tex  main_8cpp.tex.tmp  main_8cpp__incl.dot  refman.tex  testEval_8cpp.tex  testEval_8cpp__incl.dot  testFile_8cpp.tex  testFile_8cpp__incl.dot  tests_8cpp.tex  tests_8cpp__incl.dot
examples/: cmp.cpp  main.cpp
src/: CSubmissions.hpp  Contest.hpp  Doxyfile.in  Evaluate.hpp  File.hpp  FileCompare.hpp  MooshakEval.hpp  Shell.hpp  Submission.hpp  SubmissionsInfo.hpp
test/: benchCSubmissions.cpp  benchContest.cpp  benchSubmissionsInfo.cpp  testAll.cpp  testAppEvaluate.cpp  testAppSubmissions.cpp  testCSubmissions.cpp  testContest.cpp  testEval.cpp  testFC.cpp  testFile.cpp  testShell.cpp  testSubmission.cpp  testSubmissionsInfo.cpp
test/samples/apps/: conv
test/samples/contests/: filterPOO1920.txt  filterPOO1920bad.txt
test/samples/contests/POO1920/problems/: .data.tcl
test/samples/contests/POO1920/problems/P1/: .data.tcl
test/samples/contests/POO1920/problems/P2/: .data.tcl
test/samples/contests/POO1920/problems/P3/: .data.tcl
test/samples/contests/POO1920/problems/P4/: .data.tcl
test/samples/contests/POO1920/problems/P5/: .data.tcl
test/samples/contests/POO1920/problems/P6/: .data.tcl
test/samples/contests/POO1920/problems/P7/: .data.tcl
test/samples/contests/POO1920/problems/P8/: .data.tcl
test/samples/contests/POO1920/submissions/: .data.tcl
test/samples/contests/POO1920/submissions/00011952_P2_had/: .data.tcl
test/samples/contests/POO1920/submissions/00012102_P2_had/: .data.tcl
test/samples/contests/POO1920/submissions/00012382_P1_had/: .data.tcl
test/samples/contests/POO1920/submissions/00064447_P1_a58604/: .data.tcl
test/samples/contests/POO1920/submissions/00064467_P1_a61024/: .data.tcl
test/samples/contests/POO1920/submissions/00064510_P2_a58604/: .data.tcl
test/samples/contests/POO1920/submissions/00064649_P1_a61024/: .data.tcl
test/samples/contests/POO1920/submissions/00064733_P2_a61024/: .data.tcl
test/samples/contests/POO1920/submissions/00064807_P2_a61024/: .data.tcl
test/samples/contests/POO1920/submissions/00065155_P1_a59826/: .data.tcl
test/samples/contests/POO1920/submissions/00065293_P1_a64560/: .data.tcl
test/samples/contests/POO1920/submissions/00065308_P2_a64560/: .data.tcl
test/samples/contests/POO1920/submissions/00065363_P1_a57652/: .data.tcl
test/samples/contests/POO1920/submissions/00065374_P2_a57652/: .data.tcl
test/samples/contests/POO1920/submissions/00065387_P2_a59826/: .data.tcl
test/samples/contests/POO1920/submissions/00065411_P1_a64592/: .data.tcl
test/samples/contests/POO1920/submissions/00065430_P1_a57652/: .data.tcl
test/samples/contests/POO1920/submissions/00065443_P1_a61098/: .data.tcl
test/samples/contests/POO1920/submissions/00065499_P1_a64014/: .data.tcl
test/samples/contests/POO1920/submissions/00065506_P2_a61098/: .data.tcl
test/samples/contests/POO1920/submissions/00065511_P2_a64014/: .data.tcl
test/samples/contests/POO1920/submissions/00065589_P1_a48204/: .data.tcl
test/samples/contests/POO1920/submissions/00065603_P1_a57620/: .data.tcl
test/samples/contests/POO1920/submissions/00065635_P1_a61207/: .data.tcl
test/samples/contests/POO1920/submissions/00065652_P1_a64007/: .data.tcl
test/samples/mapscsv/: POOA.csv  POOAF.csv  POOAll.csv  POOAllc.map  POOFail.csv  POOFailT.csv  POOFailTA.csv  POOFinalc.map  POOUniquec.map
test/samples/mapscsv2/: POOA.csv
test/samples/subscsv/: POOA.csv  POOAF.csv  POOAll.csv  POOAllc.csv  POOFinalc.csv
test/samples/tests/T0/: input  output
test/samples/tests/T1/: input
test/samples/tests/T2/: input  output
test/samples/tests/T3forceerror/: input  output
test/samples/tests/T4/: input  output
test/samples/tests/T6/: input  output
test/samples/tests/T7/: input
test/samples/tests/T8/: input
(+1606 files in other folders)
